--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -1,10 +1,10 @@
 $black: #000000;
 $white: #FFFFFF;
-$blue: #466BC1;
+$blue: #002664;
 $light-blue: #3095B4;
 $hover-blue: #3859A5;
 $red: #B71234;
-$grey: #75787B;
+$grey: #4A4A49;
 $yellow: #fff000;
 $green: #34B233;
 $pale-green: rgba(52, 178, 51, 0.4);
@@ -14,9 +14,6 @@ $transparent: transparent;
 $dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
 $orange: #DC5034;
-$dark-orange: #EBBB67;
-$yellow: #FBF38F;
-$orange: #FAE3BB;
 $dark-orange: #EBBB67;
 
 $intro-color: #00F977;
