--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="sidebar" [@toggleNav]="state">
-    <md-toolbar color="primary">
+    <mat-toolbar color="primary">
       <button type="button" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="toggle()">
         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
       </button>
-    </md-toolbar>
+    </mat-toolbar>
 
     <ul class="nav text-center">
       <div class="profile">
