--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,7 @@
       <li><a routerLink="/introduction">{{language?.links.introduction}}</a></li>
       <li><a routerLink="/malaria-101/activity-1-1">{{language?.links.malaria101}}</a></li>
       <li><a routerLink="/meds-n-labels/activity-1">{{language?.links.medsAndLabels}}</a></li>
+      <li><a routerLink="/prevent">{{language?.links.prevention}}</a></li>
       <li><a routerLink="/introduction/activity-1">{{language?.links.pcpolicy}}</a></li>
       <li><a (click)="toggleInfokit()">{{language?.links.infokit}}</a></li>
     </ul>
