--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -24,3 +24,5 @@ $activity-incomplete: #BEBEBE;
 $malaria-outer-circle-color: #E13946;
 $med-outer-circle-color: #07717E;
 $pc-outer-circle-policy-color: #F09938;
+$prevent-outer-circle-color: #F05994;
+$prevent-color: #F0538E;
