--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -57,6 +57,20 @@
                 </div>
             </div>
         </div>
+      <div class="row">
+        <div class="menu-button" (click)="navigateToPage('/prevent')">
+          <img class="hex" src="../../assets/img/prevent.png">
+          <button class="but malaria-btn" (click)="navigateToPage('/prevent')">
+            {{language?.prevention.heading}}
+          </button>
+          <div class="outer-circle malaria-outer-circle">
+            <div class="inner-circle malaria-inner-circle">
+              <div *ngFor="let level of createRange(3); let idx=index" class="arc level{{idx+1}}" [ngClass]="stage===6 && activity>=idx+1 ? 'completed' : ''"></div>
+              <div class="activity">{{stage===6 ? activity : 0}}/3</div>
+            </div>
+          </div>
+        </div>
+      </div>
         <div class="row">
             <div class="menu-button" (click)="navigateToPage('/unlocked-stage')">
                 <img class="hex" src="../../assets/img/unlocked.png">
