--- a/src/app/styles/partials/_base.scss
+++ b/src/app/styles/partials/_base.scss
@@ -39,3 +39,9 @@ $border-radius: 10px;
 //margin
 $margin-med: 10px;
 $margin-large: 20px;
+
+//game-wrapper component margin
+$margin-bottom: 100px;
+
+//stop-the-breed game
+$margin-left: -50px;
