--- a/src/app/styles/partials/_base.scss
+++ b/src/app/styles/partials/_base.scss
@@ -40,9 +40,6 @@ $border-radius: 10px;
 //margin
 $margin-med: 10px;
 $margin-large: 20px;
+$margin-bottom-offset: 100px;
+$margin-left-offset: 80px;
 
-//game-wrapper component margin
-$margin-bottom: 100px;
-
-//stop-the-breed game
-$margin-left: -50px;
