--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -18,13 +18,11 @@ $dark-orange: #EBBB67;
 $light-grey: #75787B;
 $navy-blue: #1E1656;
 
-$intro-color: #00F977;
-$malaria-color: #EB5A61;
-$med-color: #017E84;
-$pc-policy-color: #F2AE3E;
-$activity-incomplete: #BEBEBE;
-$malaria-outer-circle-color: #E13946;
-$med-outer-circle-color: #07717E;
-$pc-outer-circle-policy-color: #F09938;
-$prevent-outer-circle-color: #F05994;
-$prevent-color: #F0538E;
+$light-green: #00F977;
+$pale-red: #EB5A61;
+$light-teal: #017E84;
+$dark-yellow: #F2AE3E;
+$pale-white: #BEBEBE;
+$maroon: #E13946;
+$dark-teal: #07717E;
+$light-yellow: #F09938;
