--- a/src/app/infokit/infokit.component.scss
+++ b/src/app/infokit/infokit.component.scss
@@ -38,7 +38,7 @@
 }
 
 .infokit-footer {
-    font-size: $font-size-med;
+    font-size: $font-size-large;
     background: $blue;
     color: $white;
     border-radius: 0 0 10px 10px;
