--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -15,6 +15,8 @@ $dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
 $orange: #DC5034;
 $dark-orange: #EBBB67;
+$light-grey: #75787B;
+$navy-blue: #1E1656;
 
 $intro-color: #00F977;
 $malaria-color: #EB5A61;
