--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,17 @@
-<mat-toolbar color="primary">
+<app-infokit #info></app-infokit>
+<mat-toolbar id="header">
     <div class="col-xs-1">
-        <button type="button" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="navbartoggle()">
-            <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+        <button type="button" id="toggle" class="btn btn-default btn-lg toggle-button" aria-label="Left Align" (click)="navbartoggle()">
+          &#9776;
         </button>
     </div>
     <div class="col-md-10 text-center">
         <span class="header-white-1 text-center">{{language?.headings.titleLeft}}</span><span class="header-2 text-center">{{language?.headings.titleRight}}</span>
     </div>
-    <button type="button" class="btn btn-default logout-button" aria-label="Left Align" (click)="logout()">{{language?.messages.logoutButton}}</button>
+  <div class="icons">
+    <i matTooltip="Update Profile" class="fa fa-pencil-square-o" (click)="editProfile()"></i>
+    <i matTooltip="Infokit" class="fa fa-archive" (click)="info.pop()"></i>
+    <i matTooltip="Logout" class="fa fa-power-off" (click)="logout()"></i>
+  </div>
 </mat-toolbar>
+
