--- a/src/app/styles/partials/_base.scss
+++ b/src/app/styles/partials/_base.scss
@@ -19,13 +19,14 @@ $z-index-bottom: 0;
 $profile-pic-height: 185px;
 $profile-pic-width: 200px;
 $profile-pic-padding: $padding-large;
+$peace-corps-left-banner-height: 1.6em;
 
 //sidebar
 $header-background: $blue;
 $side-bar-header-padding: $padding-small;
 $sidebar-background: $white;
 $sidebar-font-color: $black;
-$sidebar-width: 200px;
+$sidebar-width: 250px;
 
 //Headings
 $header-left-color: $blue;
