--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,3 +48,12 @@ body {
     margin: 0;
 }
 
+.custom-toastr-class {
+    top: $margin-top;
+    right: $margin-med;
+}
+
+.badgeBackground {
+    background-image: url("assets/img/newBadgeBackground.jpg");
+}
+
