--- a/src/app/infokit/infokit.component.html
+++ b/src/app/infokit/infokit.component.html
@@ -9,12 +9,19 @@
       </div>
     </div >
     <div class="infokit-components row">
+      <h4 [hidden]="!infokitAvailable || showInfo"> {{language?.headings.heading_info}} </h4>
       <div class="infokit-selector row" [hidden]="showInfo">
         <div class="col-xs-12" [hidden]="infokitAvailable">
-          <p> No infokit available </p>
+          <p> {{language?.messages.defaultMessage}} </p>
         </div>
         <div class="col-xs-4" *ngFor="let infoBool of infokitActive" [hidden]="!infoBool.value">
           <button class="btn btn-default btn-group-justified info-button" (click)="info(infoBool.def,infoBool.key)"><img class="infokit-icons" [src]="'assets/img/infokit/' + infoBool.img"></button>
+        </div>
+      </div>
+      <h4 [hidden]="!badgesAvailable || showInfo"> {{language?.headings.heading_badges}} </h4>
+      <div class="infokit-selector row" [hidden]="!badgesAvailable || showInfo">
+        <div class="col-xs-4" *ngFor="let item of activeBadges">
+          <button class="btn btn-default btn-group-justified info-button" (click)="badgeInfo(item.name, item.message)"><img class="infokit-icons" [src]="item.image"></button>
         </div>
       </div>
       <div class="infokit-content" [hidden]="!showInfo">
