--- a/src/app/meds-n-labels/activity-3/activity-3.component.html
+++ b/src/app/meds-n-labels/activity-3/activity-3.component.html
@@ -1,9 +1,16 @@
-<div class="col-md-4 col-xs-6 col-md-offset-4 col-xs-offset-3">
+<div class="col-md-5 col-xs-6 col-md-offset-3 col-xs-offset-3" id="chatBox">
   <div class="chat-window">
     <H3 class="text-center stage-header">{{language?.heading}}</H3>
     <div class="chats" #chats>
       <div [className]="chat.status" *ngFor="let chat of messages">
         {{chat.message}}
+        <img [src]="chat.image" *ngIf="chat.image">
+        <div *ngIf="chat.link">
+            {{language?.activityIndicationMessage}}
+          <div *ngFor="let link of chat.link">
+            <a [href] = "link.href"><button mat-stroked-button class="link-button">{{link.name}}</button></a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="send-message input-group">
