--- a/src/app/meds-n-labels/activity-3/activity-3.component.scss
+++ b/src/app/meds-n-labels/activity-3/activity-3.component.scss
@@ -1,5 +1,11 @@
 @import "../../styles/main";
 
+// variables
+$button-margin: 5px;
+$button-height: 25px;
+$button-line-height: 25px;
+$box-margin-left: 340px;
+
 .chats {
     height: 300px;
     overflow: auto;
@@ -22,4 +28,20 @@
     border-color: $grey;
     padding: $padding-med;
     background: $pale-green;
+}
+
+.link-button {
+    border-radius: $border-radius;
+    margin: $button-margin;
+    height: $button-height;
+    line-height: $button-line-height;
+    color: $white;
+}
+
+#chatBox {
+    margin-left: $box-margin-left;
+}
+
+img {
+    display: block;
 }
