--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,42 @@ body {
     margin: 0;
 }
 
+.moz {
+  display: block;
+  width: 25px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+}
+
+
+#spray, #net {
+  position: absolute;
+  display: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
+#net {
+  height: 5em;
+}
+
+#human {
+  display: block;
+  width: 10%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 50%;
+  left: 80%;
+}
+
+.text {
+  position: absolute;
+  top: 25px;
+}
 .custom-toastr-class {
     top: $margin-top;
     right: $margin-med;
