--- a/src/app/unlocked-stage/unlocked-stage.component.scss
+++ b/src/app/unlocked-stage/unlocked-stage.component.scss
@@ -99,13 +99,15 @@
 #inventory {
     @include positioning(absolute, 125px, 83%);
     border: 1px solid $black;
+    border-radius: 10px;
     width: 8%;
-    background: $orange;
-    padding-top: 30%;
+    height: 25%;
+    background: $light-grey;
 }
 
 #inventory-heading {
     @include legendText(0, 20%);
+    color: $white ;
 }
 
 #human-health-text {
@@ -113,16 +115,10 @@
 }
 
 #stars {
-  position: absolute;
-  top: 7%;
-  left: 86%;
-  color: $yellow;
-}
-
-#score {
-  position: absolute;
-  top: 11%;
-  left: 83.5%;
+    position: absolute;
+    top: 7%;
+    left: 86%;
+    color: $yellow;
 }
 
 #mosquito-health-text {
@@ -130,7 +126,7 @@
 }
 
 #net-health-text {
-  @include legendText(1%, 13%);
+    @include legendText(1%, 13%);
 }
 
 #human {
@@ -161,21 +157,34 @@
 }
 
 #spray-item {
-    @include positioning(absolute, 7%, 20%);
+    @include positioning(absolute, 50%, 20%);
     width: 50%;
     cursor: pointer;
 }
 
 #net-item {
-  @include positioning(absolute, 30%, 20%);
-  width: 50%;
-  cursor: pointer;
+    @include positioning(absolute, 30%, 20%);
+    width: 50%;
+    cursor: pointer;
 }
 
 #pill-item {
-  @include positioning(absolute, 55%, 35%);
-  width: 30%;
-  cursor: pointer;
+    @include positioning(absolute, 10%, 36%);
+    width: 20%;
+    cursor: pointer;
+}
+
+#sprayRefill {
+    @include positioning(absolute, 0%, 15%);
+    color: white;
+    border-radius: 10px;
+
+}
+
+#healthRefill {
+    @include positioning(absolute, 30%, 15%);
+    color: white;
+    border-radius: 10px;
 }
 
 #human-health {
@@ -185,20 +194,6 @@
     }
 }
 
-#mosquito-health {
-    @include health(5%, 5%);
-    #mosquito-health-bar {
-        @include healthBar(red)
-    }     
-}
-
-#net-health {
-  @include health(5%, 5%);
-  #net-health-bar {
-    @include healthBar(blue)
-  }
-}
-
 .swal2-success-circular-line-left,
 .swal2-success-fix,
 .swal2-success-circular-line-right {
@@ -206,32 +201,32 @@
 }
 
 #performance {
-  font-size: $font-size-med;
+    font-size: $font-size-med;
 }
 
 .progress-bar-vertical {
-  position: absolute;
-  top: 5%;
-  left: 2%;
-  width: 10px;
-  min-height: 100px;
-  display: flex;
-  align-items: flex-end;
-  margin-right: 20px;
-  float: left;
+    position: absolute;
+    top: 5%;
+    left: 2%;
+    width: 10px;
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 20px;
+    float: left;
 }
 
 .progress-bar-vertical .progress-bar {
-  width: 100%;
-  height: 0;
-  -webkit-transition: height 0.6s ease;
-  -o-transition: height 0.6s ease;
-  transition: height 0.6s ease;
+    width: 100%;
+    height: 0;
+    -webkit-transition: height 0.6s ease;
+   -o-transition: height 0.6s ease;
+    transition: height 0.6s ease;
 }
 
 #progressText {
-  position: absolute;
-  left: 4%;
-  top: 10%;
-  font-weight: bold;
+    position: absolute;
+    left: 4%;
+    top: 10%;
+    font-weight: bold;
 }
