--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'custom-theme';
 @import "app/styles/main";
-
+// Variables
+$netHeight: 5em;
+$mosWidth: 25px;
+$mosHealthTop: 25px;
 
 body {
     overflow-x: hidden;
@@ -48,41 +51,50 @@ body {
     margin: 0;
 }
 
+.gameSnackBar {
+    background-color: $white;
+    color: $black;
+    font-size: $font-size-large !important;
+    top: 50%;
+}
+
+// Unlock Stage game's some styles have been defined here as JQuery elements only append classes defined globally
+
 .moz {
-  display: block;
-  width: 25px;
-  margin: 0;
-  padding: 0;
-  position: absolute;
+    display: block;
+    width: $mosWidth;
+    margin: 0;
+    padding: 0;
+    position: absolute;
 }
 
 
 #spray, #net {
-  position: absolute;
-  display: none;
-  user-select: none;
-  -webkit-user-drag: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
+    position: absolute;
+    display: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 #net {
-  height: 5em;
+    height: $netHeight;
 }
 
 #human {
-  display: block;
-  width: 10%;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  top: 50%;
-  left: 80%;
+    display: block;
+    width: 10%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 50%;
+    left: 80%;
 }
 
-.text {
-  position: absolute;
-  top: 25px;
+.mosquitoHealth{
+    position: absolute;
+    top: $mosHealthTop;
 }
 .custom-toastr-class {
     top: $margin-top;
