--- a/src/app/introduction/activity-3/activity-3.component.html
+++ b/src/app/introduction/activity-3/activity-3.component.html
@@ -18,3 +18,4 @@
     </div>
 </div>
 <button-nav [complete]="activityComplete" [completed]="completed" nexturl="/malaria-101/activity-1-1" prevurl="/introduction/activity-2"></button-nav>
+<app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
