--- a/src/app/malaria-101/activity-2/activity-2.component.html
+++ b/src/app/malaria-101/activity-2/activity-2.component.html
@@ -43,4 +43,5 @@
     </div>
   </div>
 </div>
-<button-nav nexturl="/malaria-101/activity-3" prevurl="/malaria-101/activity-1-2" [completed]="completed" [complete]="activityComplete"></button-nav>
+<button-nav nexturl="/malaria-101/activity-3/1" prevurl="/malaria-101/activity-1-2" [completed]="completed" [complete]="activityComplete"></button-nav>
+<app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
