--- a/src/app/unlocked-stage/unlocked-stage.component.scss
+++ b/src/app/unlocked-stage/unlocked-stage.component.scss
@@ -61,7 +61,7 @@
 #scene {
     border: 1px solid $black;
     width: 62%;
-    background-image: url('../../assets/img/unlocked-stage/background.png');
+    background-image: url('assets/img/unlocked-stage/background.png');
     background-repeat: no-repeat;
     background-size: 100% auto;
     @include positioning(relative, 50px, 20%);
@@ -219,9 +219,6 @@
 .progress-bar-vertical .progress-bar {
     width: 100%;
     height: 0;
-    -webkit-transition: height 0.6s ease;
-   -o-transition: height 0.6s ease;
-    transition: height 0.6s ease;
 }
 
 #progressText {
