--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'custom-theme';
 @import "app/styles/main";
+@import "app/unlocked-stage/unlocked-stage.component.scss";
 // Variables
 $netHeight: 5em;
 $mosWidth: 25px;
@@ -72,10 +73,7 @@ body {
 #spray, #net {
     position: absolute;
     display: none;
-    user-select: none;
-    -webkit-user-drag: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
+    @include selectable(none);
 }
 
 #net {
@@ -87,9 +85,9 @@ body {
     width: 10%;
     margin: 0;
     padding: 0;
-    position: relative;
-    top: 50%;
-    left: 80%;
+    @include positioning(relative, 50%, 80%);
+    @include draggable(none);
+    @include selectable(none);
 }
 
 .mosquitoHealth{
