--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'custom-theme';
 @import "app/styles/main";
-
+@import "app/unlocked-stage/unlocked-stage.component.scss";
+// Variables
+$netHeight: 5em;
+$mosWidth: 25px;
+$mosHealthTop: 25px;
 
 body {
     overflow-x: hidden;
@@ -48,6 +52,48 @@ body {
     margin: 0;
 }
 
+.gameSnackBar {
+    background-color: $white;
+    color: $black;
+    font-size: $font-size-large !important;
+    top: 50%;
+}
+
+// Unlock Stage game's some styles have been defined here as JQuery elements only append classes defined globally
+
+.moz {
+    display: block;
+    width: $mosWidth;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+}
+
+
+#spray, #net {
+    position: absolute;
+    display: none;
+    @include selectable(none);
+}
+
+#net {
+    height: $netHeight;
+}
+
+#human {
+    display: block;
+    width: 10%;
+    margin: 0;
+    padding: 0;
+    @include positioning(relative, 50%, 80%);
+    @include draggable(none);
+    @include selectable(none);
+}
+
+.mosquitoHealth{
+    position: absolute;
+    top: $mosHealthTop;
+}
 .custom-toastr-class {
     top: $margin-top;
     right: $margin-med;
