--- a/src/app/meds-n-labels/activity-3/activity-3.component.html
+++ b/src/app/meds-n-labels/activity-3/activity-3.component.html
@@ -21,4 +21,4 @@
     </div>
   </div>
 </div>
-<button-nav nexturl="/stagecomplete?stage=Meds and Labels" prevurl="/meds-n-labels/activity-2" [completed]="completed" [complete]="activityComplete"></button-nav>
+<button-nav nexturl="/prevent/stop-the-breed/game/1" prevurl="/meds-n-labels/activity-2/1" [completed]="completed" [complete]="activityComplete"></button-nav>
