--- a/src/app/unlocked-stage/how-to-play/howtoplay.component.html
+++ b/src/app/unlocked-stage/how-to-play/howtoplay.component.html
@@ -11,6 +11,6 @@
             <li>{{language?.instructions.ins2}}</li>
         </ol>
         <img src="../assets/img/unlocked-stage/how-to-play.gif"/>
-        <a routerLink="/unlocked-stage/game" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
+        <a routerLink="/unlocked-stage/game/1" class="btn btn-primary btn-lg">{{language?.messages.nextButton}}</a>
     </div>
 </div>
