--- a/src/app/unlocked-stage/unlocked-stage.component.html
+++ b/src/app/unlocked-stage/unlocked-stage.component.html
@@ -57,3 +57,4 @@
     </div>
 </div>
 <button-nav prevurl="/meds-n-labels/activity-3"></button-nav>
+<app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
