--- a/src/app/prevention/stop-the-breed/stop-the-breed.component.html
+++ b/src/app/prevention/stop-the-breed/stop-the-breed.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-6 col-lg-offset-3">
-    <h2 class="sub-heading-1 text-center">{{language?.heading}}</h2>
+    <h3 class="sub-heading-1 text-center">{{language?.heading}}</h3>
   </div>
 </div>
 <div class="row">
@@ -9,7 +9,8 @@
   </div>
 </div>
 
-<button-nav nexturl="/prevent/stride-against-malaria/game" prevurl="/meds-n-labels/activity-3" [completed]="completed" [complete]="activityComplete"></button-nav>
+<button-nav nexturl="/prevent/stride-against-malaria/game/1" prevurl="/meds-n-labels/activity-3" [completed]="completed" [complete]="activityComplete"></button-nav>
+<app-level-navigate [levelInfo]="CURR_STAGE"></app-level-navigate>
 
 
 
