Added Disclaimer Page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,6 +40,11 @@
       <li>
         <a class="menu-link" routerLink="/introduction/activity-1" routerLinkActive="active-link">{{language?.links.pcpolicy}}</a>
       </li>
+      <br>
+      <li>
+        <a class="menu-link" routerLink="/disclaimer" routerLinkActive="active-link">{{language?.links.disclaimer}}</a>
+      </li>
     </ul>
   </div>
 </div>
+
